# agents

./: .ai-engineer.@md  .backend-security-coder.@md  .bi-developer.@md  .blockchain-developer.@md  .claudeignore  .computer-vision-engineer.@md  .context-manager.@md  .cpp-pro.@md  .csharp-pro.@md  .customer-support.@md  .data-scientist.@md  .database-admin.@md  .debugger.@md  .deployment-engineer.@md  .devops-troubleshooter.@md  .docs-architect.@md  .dx-optimizer.@md  .elixir-pro.@md  .error-detective.@md  .gitignore  .golang-pro.@md  .hr-pro.@md  .hybrid-cloud-architect.@md  .ios-developer.@md  .kubernetes-architect.@md  .markdownlint.json  .mcp.json  .network-engineer.@md  .nlp-llm-engineer.@md  .payment-integration.@md  .performance-engineer.@md  .python-pro.@md  .quant-analyst.@md  .risk-manager.@md  .ruby-pro.@md  .rust-pro.@md  .sales-automator.@md  .scala-pro.@md  .security-auditor.@md  .seo-authority-builder.@md  (+210 more)
plugins/plugin-eval/: GEMINI.md  README.md  pyproject.toml
plugins/plugin-eval/.claude-plugin/: plugin.json
plugins/plugin-eval/.codex-plugin/: plugin.json
plugins/plugin-eval/agents/: eval-orchestrator.md
plugins/plugin-eval/commands/: eval.md
plugins/plugin-eval/skills/evaluation-methodology/: SKILL.md
plugins/plugin-eval/src/plugin_eval/: cli.py  corpus.py  engine.py  models.py  parser.py  reporter.py  stats.py
plugins/plugin-eval/tests/: test_cli.py  test_corpus.py  test_engine.py  test_harness_portability.py  test_judge.py  test_models.py  test_monte_carlo.py  test_parser.py  test_reporter.py  test_static.py  test_stats.py
(+2064 files in other folders)
